# LinearSolversLibrary

./: .gitignore  CMakeLists.txt  README.md  test.py
docs/examples/C++/: CMakeLists.txt  Makefile  main.cpp  main.h
docs/examples/python/: LinearSolver.py  Operations.py
python/: CMakeLists.txt  LinSol_binding.cpp  LinSol_binding.h  linSol.cpp  linSol.h
python/LinearSolvers/: CMakeLists.txt  LinearSolvers_binding.h  directSolvers.cpp  directSolvers.h  iterativeSolvers.cpp  iterativeSolvers.h  linearSolvers.cpp  linearSolvers.h
python/MatOps/: CMakeLists.txt  DMOps_binding.cpp  DMOps_binding.h  matOps.cpp  matOps.h
python/Matrix/: CMakeLists.txt  DenseMatrix_binding.cpp  DenseMatrix_binding.h  matrix.cpp  matrix.h
python/Residuals/: CMakeLists.txt  Residuals_binding.h  residuals.cpp  residuals.h
python/VecOps/: CMakeLists.txt  DVOps_binding.cpp  DVOps_binding.h  vecOps.cpp  vecOps.h
python/Vector/: CMakeLists.txt  DenseVector_binding.cpp  DenseVector_binding.h  vector.cpp  vector.h
python/subLibrary/: CMakeLists.txt  subLinSol.cpp  subLinSol.h
scripts/: build_cpp_examples  build_library  build_python_lib  build_tests  setup_dir
src/: CMakeLists.txt  Makefile  Matrix.cpp  Matrix.h  main.cpp  main.h
src/Exceptions/: DenseMatrixExceptions.h  DenseVectorExceptions.h
src/LinearSolvers/: CMakeLists.txt  ConjugateGradient.cpp  ConjugateGradient.h  DirectSolver.h  FixedPointSolver.h  GaussSeidel.cpp  GaussSeidel.h  GaussianElimination.cpp  GaussianElimination.h  IterativeSolver.h  Jacobi.cpp  Jacobi.h  LinearSolver.h  SteepestDescent.cpp  SteepestDescent.h
src/LinearSolvers/omp/: CMakeLists.txt  ConjugateGradientOMP.cpp  ConjugateGradientOMP.h  GaussSeidelOMP.cpp  GaussSeidelOMP.h  GaussianEliminationOMP.cpp  GaussianEliminationOMP.h  JacobiOMP.cpp  JacobiOMP.h  SteepestDescentOMP.cpp  SteepestDescentOMP.h
src/LinearSolvers/serial/: CMakeLists.txt  ConjugateGradient.cpp  ConjugateGradient.h  GaussSeidel.cpp  GaussSeidel.h  GaussianElimination.cpp  GaussianElimination.h  Jacobi.cpp  Jacobi.h  SteepestDescent.cpp  SteepestDescent.h
src/LinearSolvers/solvers/: Jacobi.h
src/LinearSolversOMP/: GaussSeidelOMP.cpp  GaussSeidelOMP.h  GaussianEliminationOMP.h  JacobiOMP.cpp  JacobiOMP.h
src/MatOps/: DMOps.cpp  DMOps.h
src/Matrix/: CMakeLists.txt  DenseMatrix.cpp  DenseMatrix.h  Matrix.cpp  Matrix.h
src/Matrix/Sparse/: SparseTypes.h  (+6 more)
src/Ops/: DMOps.h  DVOps.h  Ops.h  error.txt
src/Residuals/: CMakeLists.txt  Residuals.cpp  Residuals.h  ResidualsOMP.cpp  ResidualsOMP.h
src/VecOps/: DVOps.cpp  DVOps.h
src/Vector/: CMakeLists.txt  DenseVector.cpp  DenseVector.h  Vector.h
src/mpi/: CMakeLists.txt
src/openmp/: CMakeLists.txt
src/serial/: CMakeLists.txt
src/utils/: CMakeLists.txt  SparseTypes.h  VectorHasher.h  file_reader.cpp  file_reader.h
test/: CMakeLists.txt  Makefile  test_DMOps.cpp  test_DVOps.cpp  test_DenseMatrix.cpp  test_DenseVector.cpp  test_GaussSeidel.cpp  test_LinearSolvers.cpp  test_Matrix.cpp  test_Residuals.cpp  test_numRowsCols.cpp
test/test_DenseMatrixVector/: CMakeLists.txt  test_DMOps.cpp  test_DVOps.cpp  test_DenseMatrix.cpp  test_DenseVector.cpp  test_Matrix.cpp
test/test_LinearSolvers/: CMakeLists.txt  test_ConjugateGradient.cpp  test_GaussSeidel.cpp  test_GaussianElimination.cpp  test_Jacobi.cpp  test_Residuals.cpp  test_SteepestDescent.cpp
test/test_LinearSolvers/test_serial/: CMakeLists.txt  test_ConjugateGradient.cpp  test_GaussSeidel.cpp  test_GaussianElimination.cpp  test_Jacobi.cpp  test_Residuals.cpp  test_SteepestDescent.cpp
test/test_SparseMatrix/: test_SparseIDXMatOps.cpp  test_SparseIDXVecOps.cpp  test_SparseMatrixIdx.cpp  test_SparseVectorIdx.cpp
(+84 files in other folders)
